# ssca

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md  tailwind.config.js
config/: deploy.yml
db/: db.sqlite
db/migrations/: 20240526150544_init.sql
migrations/: 20240522162136_create_tables.sql
src/: components.rs  extractors.rs  join.rs  layouts.rs  main.rs  state.rs  util.rs
src/chat/: actions.rs  components.rs  mod.rs  views.rs  ws.rs
src/rooms/: actions.rs  mod.rs  views.rs
src/users/: actions.rs  auth.rs  extractors.rs  mod.rs  views.rs
