[package]
name = "shat-stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = {version= "0.7.5", features = ["ws"]}
bcrypt = "0.15.1"
futures = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shtml = { git = "https://github.com/swlkr/shtml"}
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
